--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="images/illustration-hero.svg" alt="">
 
     <h1> Order Summary</h1>
-    <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+    <p id="p">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
     <div id="pag">
         <img src="images/icon-music.svg" alt="">
